// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Validators/VotingPower matches snapshot 1`] = `
<div
  className="tss-1iftn23-root"
>
  <div
    className="tss-lj3qlt-content"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 mui-pfovru-MuiTypography-root"
    >
      
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 percentage mui-pfovru-MuiTypography-root"
    >
      20%
    </p>
  </div>
  <div
    className="tss-si1ndt-chart"
  >
    <div
      className="tss-19w8hwk-active"
    />
  </div>
</div>
`;

exports[`screen: Validators/VotingPower matches snapshot with topVotingPower set to false 1`] = `
<div
  className="tss-u31ock-root"
>
  <div
    className="tss-1dmmoum-content"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 mui-pfovru-MuiTypography-root"
    >
      
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 percentage mui-pfovru-MuiTypography-root"
    >
      0%
    </p>
  </div>
  <div
    className="tss-fl4w4-chart"
  >
    <div
      className="tss-c7dmbn-active"
    />
  </div>
</div>
`;
